Added what's next links

--- a/index.html
+++ b/index.html
@@ -125,6 +125,37 @@
         <div class="col-sm-12 col-md-10 col-lg-8 col-xl-6">
           <h1 class="mt-4"> The InteroperaBLE Identifier </h1>
           <p class="lead"> An open specification to maximise the interoperability of BLE identifiers across protocols, platforms and operating systems. </p>
+          <!----- Where to next? ----->
+          <hr>
+          <h2> Where to next? </h2>
+          <p class="lead"> Background on the InteroperaBLE Identifier. </p>
+          <ul class="list-unstyled">
+            <li class="media my-2">
+              <a href="https://reelyactive.github.io/diy/best-practices-ble-identifiers/">
+                <img src="https://reelyactive.github.io/diy/best-practices-ble-identifiers/images/icon.png"
+                     class="align-self-start mr-3">
+              </a>
+              <div class="media-body">
+                <a href="https://reelyactive.github.io/diy/best-practices-ble-identifiers/">
+                  <h5 class="mt-0 mb-1"> Best practices for BLE identifiers </h5>
+                </a>
+                Assignment of Bluetooth Low Energy (BLE) identifiers for interoperability and interpretability.
+              </div>
+            </li>
+            <li class="media my-2">
+              <a href="https://reelyactive.github.io/diy/rfid-unity/">
+                <img src="https://reelyactive.github.io/diy/rfid-unity/images/icon.png"
+                     class="align-self-start mr-3">
+              </a>
+              <div class="media-body">
+                <a href="https://reelyactive.github.io/diy/rfid-unity/">
+                  <h5 class="mt-0 mb-1"> Enabling computers to understand who/what is where/how </h5>
+                </a>
+                Overview of the key insight behind reelyActive's technology and open source software.
+              </div>
+            </li>
+          </ul>
+          <p> &nbsp; </p>
         </div>
       </div>
     </div>
