--- a/index.html
+++ b/index.html
@@ -352,7 +352,10 @@
           <p> To be completed... </p>
           <h3 class="mt-4"> Entity UUID <em>alternative</em> interpretations </h3>
           <p> An InteroperaBLE Identifier may alternatively be interpreted as something other than a URI.  In this case, the 28-bit identifier typically represents an index into a table associated with the Entity UUID. </p>
-          <h4> Unicode Code Point </h4>
+          <h4>
+            Unicode Code Point
+            <small class="text-muted"> <i class="fas fa-language"></i> </small>
+          </h4>
           <p> Interpret the Instance ID as a single Unicode code point (i.e. as UTF-32).  The <a href="https://unicode.org" target="_blank"><i class="fas fa-external-link-alt"></i> Unicode standard</a> includes over 144,000 characters, including <a href="https://unicode.org/emoji/charts/full-emoji-list.html" target="_blank"><i class="fas fa-external-link-alt"></i> a growing list of emojis</a>, which can be encoded in an InteroperaBLE Identifier, provided they consist of a single code point. </p>
           <dl class="row mt-4">
             <dt class="col-sm-4 col-lg-3 offset-sm-1 offset-lg-2"> 
@@ -375,6 +378,34 @@
             </dd>
           </dl>
           <p> For example, Instance ID <b class="font-monospace">0x001f989</b> would be interpreted as <span class="display-6"> &#x1f989 </span> <small class="text-muted">(owl emoji)</small> </p>
+          <h4>
+            Button
+            <small class="text-muted">
+              <i class="fas fa-hand-pointer"></i>
+            </small>
+          </h4>
+          <p> Interpret as a button press event.  Devices such as Minew button wristbands do not transmit button status explicitly in a packet payload, but rather can be configured to transmit a predefined packet (ex: iBeacon or Eddystone) following a button press. </p>
+          <dl class="row mt-4">
+            <dt class="col-sm-4 col-lg-3 offset-sm-1 offset-lg-2"> 
+              <span class="badge rounded-pill bg-primary">
+                <i class="fas fa-barcode"></i>
+              </span>
+              &nbsp; Entity UUID
+            </dt>
+            <dd class="col-sm-7 font-monospace user-select-all">
+              496f4944-434f-4445-b73e-427574746f6e
+            </dd>
+            <dt class="col-sm-4 col-lg-3 offset-sm-1 offset-lg-2"> 
+              <span class="badge rounded-pill bg-primary">
+                <i class="fas fa-barcode"></i>
+              </span>
+              &nbsp; <em>Elided</em> Entity UUID
+            </dt>
+            <dd class="col-sm-7 font-monospace user-select-all">
+              496f4944427574746f6e
+            </dd>
+          </dl>
+          <p> The Instance ID may be ignored.  The interpretation is that the device transmitting this Entity UUID is signalling a button press event. </p>
           <!----- Where to next ----->
           <hr class="my-4">
           <h2> Where to next? </h2>
