Added links to advlib-interoperable and Pareto Anywhere

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <dt class="col-sm-3">What's with the BLE?</dt>
                 <dd class="col-sm-9">The open specification was motivated by <i class="fab fa-bluetooth"></i> Bluetooth Low Energy (BLE) interoperability challenges, but is in fact protocol-agnostic.</dd>
                 <dt class="col-sm-3">Can anyone use this?</dt>
-                <dd class="col-sm-9">Yes. It is an open specification.</dd>
+                <dd class="col-sm-9">Yes. It is an open specification and <a href="https://github.com/reelyactive/advlib-interoperable/" target="_blank"><i class="fas fa-external-link-alt"></i> advlib-interoperable</a> is an open source interpreter implementation which is embedded in <a href="https://www.reelyactive.com/pareto/anywhere/" target="_blank"><i class="fas fa-external-link-alt"></i> Pareto Anywhere</a>. </dd>
               </dl>
             </div>
           </div>
@@ -442,7 +442,7 @@
     <footer class="footer bg-dark bg-gradient">
       <a href="https://github.com/reelyactive/interaoperable-identifier"> InteroperaBLE Identifier </a>
       &nbsp; | &nbsp;
-      <a href="https://www.reelyactive.com"> &copy; reelyActive 2020-2021 </a>
+      <a href="https://www.reelyactive.com"> &copy; reelyActive 2020-2022 </a>
     </footer>
 
     <!-- Optional JavaScript -->
