Corrected internal links

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <!----- Part 1 of 2 ----->
           <div class="card my-5 bg-light border-0">
             <div class="card-body pt-4">
-              <h2 id="step01" class="card-title my-2">
+              <h2 id="part01" class="card-title my-2">
                 InteroperaBLE Identifier structure &nbsp;
                 <a href="#part01" class="badge bg-primary">Part 1 of 2</a>
               </h2>
@@ -334,7 +334,7 @@
           <!----- Part 2 of 2 ----->
           <div class="card my-5 bg-light border-0">
             <div class="card-body pt-4">
-              <h2 id="step01" class="card-title my-2">
+              <h2 id="part01" class="card-title my-2">
                 InteroperaBLE Identifier interpretation &nbsp;
                 <a href="#part02" class="badge bg-primary">Part 2 of 2</a>
               </h2>
