--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
           content="An open specification by reelyActive to maximise the interoperability of radio-identifiers across protocols, platforms and operating systems.">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-49659454-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-49659454-2');
-    </script>
     <link rel="stylesheet" href="style/bootstrappyactive.min.css">
     <title> InteroperaBLE Identifier </title>
     <!----- Structured, linked metadata (JSON-LD & Schema.org) ----->
@@ -80,7 +73,8 @@
                   <a class="dropdown-item"
                      href="https://www.reelyactive.com/how-we-observe/#digital">
                     <i class="fas fa-mouse-pointer"></i>
-                    Page view tracking (gtag.js) &nbsp;
+                    Privacy-centric metrics
+                    (<i class="fab fa-cloudflare"></i> beacon.js) &nbsp;
                     <span class="badge bg-warning animate-breathing">
                       <i class="fas fa-user-tag"></i>
                     </span>
@@ -161,7 +155,7 @@
             </div>
           </div>
           <!----- Part 1 of 2 ----->
-          <div class="card my-5 bg-light border-0">
+          <div class="card hover-shadow my-5 bg-light border-0">
             <div class="card-body pt-4">
               <h2 id="part01" class="card-title my-2">
                 InteroperaBLE Identifier structure &nbsp;
@@ -332,7 +326,7 @@
             </div>
           </div>
           <!----- Part 2 of 2 ----->
-          <div class="card my-5 bg-light border-0">
+          <div class="card hover-shadow my-5 bg-light border-0">
             <div class="card-body pt-4">
               <h2 id="part01" class="card-title my-2">
                 InteroperaBLE Identifier interpretation &nbsp;
@@ -467,5 +461,8 @@
     <!-- Optional JavaScript -->
     <script defer src="js/fontawesome-reelyactive.min.js"></script>
     <script src="js/bootstrappyactive.bundle.min.js"></script>
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+            data-cf-beacon='{"token": "75099ede11644990a7ffdffc6c28f487"}'>
+    </script>
   </body>
 </html>
