--- a/index.html
+++ b/index.html
@@ -373,6 +373,25 @@
           </dl>
           <p> For example, Instance ID <b class="font-monospace">0x001f989</b> would be interpreted as <span class="display-6"> &#x1f989 </span> <small class="text-muted">(owl emoji)</small> </p>
           <h4>
+            DirAct
+            <small class="text-muted">
+              <i class="fas fa-people-arrows"></i>
+            </small>
+          </h4>
+          <p> Interpret as a <a href="https://reelyactive.github.io/diract/" target="_blank"><i class="fas fa-external-link-alt"></i> DirAct</a> proximity beacon. </p>
+          <dl class="row mt-4">
+            <dt class="col-sm-4 col-lg-3 offset-sm-1 offset-lg-2"> 
+              <span class="badge rounded-pill bg-primary">
+                <i class="fas fa-barcode"></i>
+              </span>
+              &nbsp; <em>Elided</em> Entity UUID
+            </dt>
+            <dd class="col-sm-7 font-monospace user-select-all">
+              496f4944446972416374
+            </dd>
+          </dl>
+          <p> The Instance ID is the 32-bit DirAct instance. </p>
+          <h4>
             Button
             <small class="text-muted">
               <i class="fas fa-hand-pointer"></i>
