Added used by lists

--- a/index.html
+++ b/index.html
@@ -372,6 +372,21 @@
             </dd>
           </dl>
           <p> The Instance ID is interpreted as 7-character-long, leading-zero-padded hexadecimal string (ex: <span class="font-monospace">"0123abc"</span>).  This is prefixed with <span class="font-monospace">"file:/"</span> and suffixed with <span class="font-monospace">".mp3"</span> to complete the URI. </p>
+          <div class="row">
+            <div class="col-sm-3 col-lg-2 offset-sm-1 offset-lg-2">
+              <b class="text-muted"> Used by: </b>
+            </div>
+            <div class="col-sm-7">
+              <ul class="list-unstyled ms-5">
+                <li>
+                  <a href="https://github.com/reelyactive/audible-proximity"
+                     target="_blank">
+                    <i class="fab fa-github"></i>/reelyactive/audible-proximity
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
           <h3 class="mt-4"> Entity UUID <em>alternative</em> interpretations </h3>
           <p> An InteroperaBLE Identifier may alternatively be interpreted as something other than a URI.  In this case, the 28-bit identifier typically represents an index into a table associated with the Entity UUID. </p>
           <h4>
@@ -419,6 +434,21 @@
             </dd>
           </dl>
           <p> The Instance ID is the 32-bit DirAct instance. </p>
+          <div class="row">
+            <div class="col-sm-3 col-lg-2 offset-sm-1 offset-lg-2">
+              <b class="text-muted"> Used by: </b>
+            </div>
+            <div class="col-sm-7">
+              <ul class="list-unstyled ms-5">
+                <li>
+                  <a href="https://github.com/reelyactive/diract"
+                     target="_blank">
+                    <i class="fab fa-github"></i>/reelyactive/diract
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
           <h4>
             Button
             <small class="text-muted">
