Added link to BLE advertising data best practices tutorial

--- a/index.html
+++ b/index.html
@@ -572,6 +572,20 @@
               Assignment of Bluetooth Low Energy (BLE) identifiers for interoperability and interpretability.
             </li>
           </ul>
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item border-0">
+              <a href="https://reelyactive.github.io/diy/best-practices-ble-advertising-data/">
+                <img src="https://reelyactive.github.io/diy/best-practices-ble-advertising-data/images/icon.png"
+                     class="rounded-1">
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a href="https://reelyactive.github.io/diy/best-practices-ble-advertising-data/">
+                <h5 class="mt-0 mb-1"> Best practices for BLE advertising data </h5>
+              </a>
+              Structuring Bluetooth Low Energy (BLE) advertising data for interoperability and interpretability.
+            </li>
+          </ul>
           <ul class="list-group list-group-horizontal mb-4">
             <li class="list-group-item border-0">
               <a href="https://reelyactive.github.io">
